Fixed: Compatibility with Wp Maximum Upload File Size plugin ( [#1304](https://github.com/WPChill/download-monitor/issues/1304) )
Fixed: Create No Access Page on plugin install/activate. ( [#1305](https://github.com/WPChill/download-monitor/issues/1305) )
Fixed: Removed unused onboarding page code. ( [#1306](https://github.com/WPChill/download-monitor/issues/1306) )

= 4.8.6 - 03.07.2023 =
Fixed: Check custom tables for columns ( [#1288](https://github.com/WPChill/download-monitor/issues/1288) )
Added: Upsells in reports page ( [#1290](https://github.com/WPChill/download-monitor/issues/1290) )
Fixed: Total downloads shortcode ( [#1292](https://github.com/WPChill/download-monitor/issues/1292) )
Fixed: Recreate upgrade environment hides downloads ( [#1278](https://github.com/WPChill/download-monitor/issues/1278) )
Added: CRON to check for license validity ( [#1287](https://github.com/WPChill/download-monitor/issues/1287) )
Changed: Update about page ( [#1285](https://github.com/WPChill/download-monitor/issues/1285) )
Fixed: Open link in new doesn't work with no access page ( [#1286](https://github.com/WPChill/download-monitor/issues/1286) )
Fixed: LiteSpeed X-Sendfile doesn't log downloads ( [#1294](https://github.com/WPChill/download-monitor/issues/1294) )

= 4.8.5 - 09.06.2023 =
Fixed: External logging download failure ( [#1283](https://github.com/WPChill/download-monitor/issues/1283) )
Fixed: LiteSpeed server functionality fo X-Accel-Redirect / X-Sendfile option ( [#1282](https://github.com/WPChill/download-monitor/issues/1282) )

= 4.8.4 - 07.06.2023 =
Fixed: Security issue regarding file uploading ( [#1276](https://github.com/WPChill/download-monitor/issues/1276) )
Fixed: Cascading downloads ( [#1275](https://github.com/WPChill/download-monitor/issues/1275) )
Fixed: Duplicate downloads when multiple post meta entries for same download ( [#1279](https://github.com/WPChill/download-monitor/issues/1279) )

= 4.8.3 - 31.05.2023 =
Fixed: External file checking
