@@ -439,11 +439,11 @@ class DLM_Reports_Page {
 		<select class="user-downloads-filters__filter dlm-available-with-pro__overlay" data-type="download_status">
 			<option value=""><?php echo esc_html__( 'Filter by status', 'download-monitor' ); ?></option>
 		</select>
-		<a target="_blank" href="https://www.download-monitor.com/pricing/?utm_source=reports_page&utm_medium=lite-vs-pro&utm_campaign=dlm-enhanced-metrics"><span class="dlm-available-with-pro__label">PRO</span></a>
+		<a target="_blank" href="https://www.download-monitor.com/pricing/?utm_source=reports_page&utm_medium=lite-vs-pro&utm_campaign=dlm-enhanced-metrics"><span class="dlm-upsell-badge">PRO</span></a>
 		<select class="user-downloads-filters__filter dlm-available-with-pro__overlay" data-type="user_id">
 			<option value=""><?php echo esc_html__( 'Filter by user', 'download-monitor' ); ?></option>
 		</select>
-		<a target="_blank" href="https://www.download-monitor.com/pricing/?utm_source=reports_page&utm_medium=lite-vs-pro&utm_campaign=dlm-enhanced-metrics"><span class="dlm-available-with-pro__label">PRO</span></a>
+		<a target="_blank" href="https://www.download-monitor.com/pricing/?utm_source=reports_page&utm_medium=lite-vs-pro&utm_campaign=dlm-enhanced-metrics"><span class="dlm-upsell-badge">PRO</span></a>
 		<?php
 	}
 }
