@@ -8,6 +8,8 @@ Added: Filter to retreived log item in DLM_WordPress_Log_Item_Repository ( [#130
 Fixed: Compatibility with Wp Maximum Upload File Size plugin ( [#1304](https://github.com/WPChill/download-monitor/issues/1304) )
 Fixed: Create No Access Page on plugin install/activate. ( [#1305](https://github.com/WPChill/download-monitor/issues/1305) )
 Fixed: Removed unused onboarding page code. ( [#1306](https://github.com/WPChill/download-monitor/issues/1306) )
+Fixed: Minor upsells update ( [#1308](https://github.com/WPChill/download-monitor/issues/1308) )
+
 
 = 4.8.6 - 03.07.2023 =
 Fixed: Check custom tables for columns ( [#1288](https://github.com/WPChill/download-monitor/issues/1288) )
